--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
 <body>
-Currently working on it...nothing here yet...
+	<center>
+		<img src="underconstruction.jfif" alt="" />
+		<h2>Currently working on it...nothing here yet...</h2>
+	</center>
 </html>
