Background canvas width/height responsive fix

--- a/src/assets/backgroundSquares.html
+++ b/src/assets/backgroundSquares.html
@@ -159,7 +159,7 @@
 
             /***** RENDERING *******/
 
-            gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+            gl.viewport(0, 0, gl.canvas.clientWidth, gl.canvas.clientHeight);
             gl.clearColor(0, 0, 0, 0);
             gl.clear(gl.COLOR_BUFFER_BIT);
             gl.useProgram(program);
